--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  expansion_tile_card: ^2.0.0
+  flutter_staggered_grid_view: ^0.6.1
+ 
+ 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_staggered_grid_view: ^0.6.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -58,7 +63,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/
+      - assets/images/
+    
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
