--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,21 @@ dependencies:
   cupertino_icons: ^1.0.2
   expansion_tile_card: ^2.0.0
   flutter_staggered_grid_view: ^0.6.1
+  skeleton_text: ^3.0.0
+  lazy_load_scrollview: ^1.3.0
+  http: ^0.12.2
+  flutter_dotenv: ^2.1.0
+  transparent_image: ^1.0.0
+  url_launcher: ^6.0.18
+  web_socket_channel: ^2.1.0
+ 
  
  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_staggered_grid_view: ^0.6.1
+ 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -81,7 +89,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
@@ -92,6 +100,21 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+
+      - family: Anton
+        fonts:
+          - asset: fonts/Anton-Regular.ttf
+
+      - family: Monoton
+        fonts:
+          - asset: fonts/Monoton-Regular.ttf
+
+
+      - family: Yellowtail
+        fonts:
+          - asset: fonts/Yellowtail-Regular.ttf
+
+
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
